# libbencode

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
include/: bencode.hpp
include/bencode/: algorithm.hpp  basic_value.hpp  dict.hpp  exception.hpp  integer.hpp  istream.hpp  list.hpp  ostream.hpp  string.hpp  token.hpp  typedef.hpp  utility.hpp  value.hpp
include/bencode/token/: basic_token.hpp  dictionary.hpp  integer.hpp  list.hpp  list.hpp.orig  string.hpp  string.hpp.orig
src/bencode/: exception.cpp
src/token/: string.cpp
test/: CMakeLists.txt  dict_test.cpp  integer_test.cpp  istream_test.cpp  list_test.cpp  ostream_test.cpp  string_test.cpp  utility_test.cpp
